--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,78 @@
 <div style="text-align:center">
-  <h2>Scorecard</h2>
-</div>
-
-<table class="table table-bordered">
-  <tr><th>Record</th><th>Points</th><th>Nonce</th><th>Hash</th></tr>
-  <tr><td>0</td><td></td><td></td><td>0000</td></tr>
-  <tr *ngFor="let record of chain; index as i"><td>{{i+1}}</td><td><input type="number"/></td><td><input type="text"/></td><td><input type="text"/></td></tr>
-</table>
-<button class="btn btn-primary">Validate</button>
-
-<hr>
-
-<div style="text-align:center">
   <h2>Miner</h2>
 </div>
 <form name="miner" class="form-horizontal">
   <div class="form-group">
-    <label for="previous_hash" class="col-sm-2 control-label">Previous Hash</label>
-    <div class="col-sm-2">
-      <input type="text" class="form-control" name="previous_hash" [(ngModel)]="block.previous_hash" placeholder="E.g. 0000">
+    <label for="previous_hash" class="col-sm-2 control-label">Previous Hash:</label>
+    <div class="col-sm-10">
+      <input type="text" 
+        class="form-control" 
+        name="previous_hash" 
+        [(ngModel)]="block.previous_hash" 
+        placeholder="E.g. 0000" 
+        (change)="mine(block)">
     </div>
   </div>
   <div class="form-group">
-    <label for="points" class="col-sm-2 control-label">Points</label>
-    <div class="col-sm-2">
-      <input type="number" class="form-control" name="points" [(ngModel)]="block.points" placeholder="E.g. 7">
+    <label for="points" class="col-sm-2 control-label">Points:</label>
+    <div class="col-sm-10">
+      <input type="number" 
+        class="form-control" 
+        name="points" 
+        [(ngModel)]="block.points" 
+        placeholder="E.g. 7" 
+        (change)="mine(block)"
+        (keyup)="mine(block)">
     </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-2 control-label">Nonce</label>
-    <div class="col-sm-2">
+    <label class="col-sm-2 control-label">Nonce:</label>
+    <div class="col-sm-10">
       <span class="badge">{{block.nonce}}</span>
     </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-2 control-label">Hash</label>
-    <div class="col-sm-2">
+    <label class="col-sm-2 control-label">Hash:</label>
+    <div class="col-sm-10">
       <span class="badge">{{block.hashed}}</span>
     </div>
   </div>
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary" (click)="mine(block)">Mine</button>
-      <button type="reset" class="btn btn-default" (click)="reset(block)">Reset</button>
+    <div class="col-sm-offset-2 col-sm-10 text-center">
+      <!--<button type="submit" class="btn btn-primary" (click)="mine(block)">Mine</button>-->
+      <button type="reset" class="btn btn-primary" (click)="reset(block)">Ok, now reset</button>
     </div>
   </div>
 </form>
+
+<hr style="margin:7em">
+
+<div style="text-align:center">
+  <h2>Scorecard</h2>
+</div>
+
+<table class="table table-bordered">
+  <tr>
+    <th class=text-center>Record</th>
+    <th class=text-center>Points</th>
+    <th class=text-center>Nonce</th>
+    <th class=text-center>Hash</th>
+  </tr>
+  <tr>
+    <td class=text-center>0</td>
+    <td class=text-center>--</td>
+    <td class=text-center>--</td>
+    <td class=text-center>0000</td>
+  </tr>
+  <tr *ngFor="let block of chain; index as i" [ngClass]="getClass(chain, i)">
+    <td class=text-center >{{i+1}}</td>
+    <td><input type="number" class="form-control" [(ngModel)]="block.points" /></td>
+    <td><input type="text" class="form-control" [(ngModel)]="block.nonce" /></td>
+    <td><input type="text" class="form-control" [(ngModel)]="block.hashed" /></td>
+  </tr>
+</table>
+<div class="text-center">
+  <button type="reset" class="btn btn-default" (click)="resetChain()">Ok, now reset</button>
+</div>
+
+<hr style="margin:7em">
